# truchain

./: .gitignore  AI_INTEGRATION.md  API_DOCUMENTATION.md  API_IMPLEMENTATION_COMPLETE.md  API_QUICK_START.md  AUDIO_FINGERPRINT_README.md  CLAUDE.md  HYBRID_API_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATION_PLAN.md  MULTI_VIDEO_RESULTS.md  PROJECT_ORGANIZATION.txt  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_V2.md  SPEAKER_VERIFICATION_GUIDE.md  SPEAKER_VERIFICATION_RESULTS.md  TESTING.md  TEST_CLIPS_README.md  V2_IMPLEMENTATION_COMPLETE.md  V2_QUICK_START.md  api_server.py  audio_embedding.py  audio_fingerprint.py  audio_transcription.py  download_youtube.py  hybrid_verification.py  process_all_videos.py  process_videos_hybrid.py  process_videos_ml.py  process_videos_v2.py  requirements.txt  test_hybrid_system.py  test_hybrid_verification.py  test_middle_clips.py  test_ml_embeddings.py  test_speaker_only.py  text_matching.py  transcription_comparison.json  (+8 more)
ai-layer/: .env.example  README_server.md  api_server.py  sliding_window_matcher.py  speaker_verification.py  start_ai_service.sh  word_transcription.py
backend/: .gitignore  README.md  package-lock.json  package.json
frankenstein_clips_v2/: concat_list.txt
frankenstein_clips_v3/: timestamps.txt
frontend/: .env  (+2 more)
truchain/programs/truchain/: Cargo.toml
truchain/programs/truchain/src/: errors.rs  lib.rs
truchain/programs/truchain/src/instructions/: endorse_video.rs  mod.rs  register_official.rs  register_video.rs
truchain/programs/truchain/src/state/: mod.rs  official.rs  video.rs
(+96 files in other folders)
