[package]
name = "truchain"
version = "0.1.0"
description = "TruChain - Video Authenticity Verification System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "truchain"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.0"
